# cctx-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-05-13-semantic-search-openrouter-commit-routing-plan.md  2026-05-14-audit-fixes-plan.md
openspec/backlog/: multi-commit-flow.md  prompt-rewriter.md
openspec/changes/archive/2026-05-13-improve-context-summaries-and-commit-flow/: design.md  tasks.md
openspec/changes/archive/2026-05-13-mcp-server-versioning/: proposal.md
openspec/changes/archive/2026-05-13-post-audit-advanced-metrics/: design.md
openspec/changes/cctx-mcp-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/fix-semantic-search-real/: design.md  proposal.md  tasks.md
openspec/changes/improve-context-summaries-and-commit-flow/: proposal.md  tasks.md
openspec/changes/mcp-server-versioning/: design.md  tasks.md
openspec/changes/post-audit-advanced-metrics/: proposal.md  tasks.md
openspec/changes/post-audit-improvements/: tasks.md
openspec/changes/real-metrics-pipeline/: design.md  proposal.md  tasks.md
src/: __init__.py  cache.py  change_intel.py  commit_generator.py  config.py  metrics.py  ollama_client.py  pre_index_cli.py  search.py  server.py  summaries.py  vector_index.py
src/analyzers/: __init__.py  base.py  dart.py  go.py  python.py  rust.py  swift.py  typescript.py
src/code_context/: __init__.py  cache.py  change_intel.py  commit_generator.py  config.py  context.py  handlers.py  metrics.py  ollama_client.py  pre_index_cli.py  search.py  server.py  summaries.py  vector_index.py
src/code_context/analyzers/: __init__.py  base.py  dart.py  go.py  python.py  rust.py  swift.py  typescript.py
src/code_context/llm/: __init__.py  contracts.py  router.py
src/code_context/llm/providers/: ollama.py  openrouter.py
src/llm/: contracts.py  router.py
src/llm/providers/: __init__.py  ollama.py  openrouter.py
tests/: conftest.py  test_analyze_project.py  test_change_intel.py  test_code_search.py  test_commit_flow.py  test_commit_generator.py  test_dependencies.py  test_dir_summary.py  test_find_files.py  test_health.py  test_integration.py  test_llm_router.py  test_metrics.py  test_ollama_client.py  test_openrouter_provider.py  test_search_trace_calls.py  test_semantic_search_quality.py  test_smoke_server.py  test_summaries.py  test_trace_calls_integration.py  test_vector_index.py  test_version.py
(+31 files in other folders)
