[project]
name = "code-context"
version = "0.1.0"
description = "MCP server for efficient code context retrieval - reduces AI agent token usage by providing structured code summaries instead of full file reads"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-swift>=0.6.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
code-context = "code_context.server:main"
pre-index = "pre_index_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
