[project]
name = "cctx-mcp"
version = "0.5.4"
description = "MCP server for AI agents — structured code analysis that cuts token usage by 87%"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "mcp-server", "ai-agents", "code-analysis", "tree-sitter", "developer-tools", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-swift>=0.6.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/nikondrat/cctx-mcp"
Repository = "https://github.com/nikondrat/cctx-mcp"
Issues = "https://github.com/nikondrat/cctx-mcp/issues"

[project.scripts]
cctx-mcp = "code_context.server:main"
pre-index = "code_context.pre_index_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
